[package]
name = "icon_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
serde = { version= "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
awc = { version = "3.0.1", features = ["rustls"] }
mime = "0.3.16"
rustls = "0.20"
webpki-roots = "0.22"