[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = [
    "runtime-async-std-native-tls",
    "postgres",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
aws-types = "0.49.0"
anyhow = "1.0.66"
mime_guess = "2"


[dev-dependencies]
reqwest = "0.11"
